# snakeboost

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: tests.yaml
docs/: boost.md  conf.py  index.md  overview.md  requirements.txt
docs/enhancers/: pipenv.md  pyscript.md  tar.md  xvfbrun.md
docs/reference/: enhancers.md  enhancers.rst  pyscripts.rst
snakeboost/: __init__.py  boost.py  datalad.py  env.py  general.py  pipenv.py  script.py  sh_cmd.py  tar.py  utils.py  xvfb.py
snakeboost/bash/: __init__.py  abstract.py  awk.py  cmd.py  globals.py  statement.py  utils.py
tests/: test_script.py  test_tar.py
