[tool.poetry]
name = "snakeboost"
version = "0.1.0"
description = "Utility functions to turbocharge your snakemake workflows. Virtualenvs, tarfiles, and more."
authors = ["Peter Van Dyken <pvandyk2@uwo.ca>"]
license = "MIT"
keywords = ["snakemake", "workflow", "data science", "utility", "helpers"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Utilities",
    "Typing :: Typed"
]
packages = [
    { include = "snakeboost" }
]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
attr = "^0.3.1"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
pytest = "^6.2.5"
flake8 = "^4.0.1"
isort = "^5.10.1"
pre-commit = "^2.15.0"
mkinit = "^0.3.3"
pylint = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
setup = "pre-commit install"
mkinit = "mkinit --recursive --nomods --black -i snakeboost"
check_mkinit = "mkinit --recursive --nomods --black --diff snakeboost"

[tool.pylint.master]
ignore-patterns = "^[0-9][0-9]+_,^test_"

[tool.pylint.format]
good-names = "i,j,k,ex,_,x,y,f,d,s"

[tool.pylint.messages_control]
disable = """
    missing-function-docstring,
    missing-module-docstring,
"""
